2013-08-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Fix detection of Emacs autosave files.

2013-08-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* docs/grub.texi: Introduce terminal window position options:
	terminal-left: terminal window's left position
	terminal-top: terminal window's top position
	terminal-width: terminal window's width
	terminal-height: terminal window's height
	terminal-border: terminal window's border width
	* grub-core/gfxmenu/theme-loader.c: Likewise.
	* include/grub/gfxmenu_view.h: Likewise.
	* po/exlude.pot: Likewise.
	* grub-core/gfxmenu/view.c: Likewise.
	Also updated minimal window size.
	Also terminal_sanity_check function has been introduced.
	* grub-core/tests/checksums.h: Update (terminal window height
	is adjusted now for low resolution screen)

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/checksums.h: Update (1-pixel difference in marker
	position).

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/exclude.pot: Add few recent exceptions.

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_func_test.in: Add unicode.pf2.

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Start with
	standard rather than noral color, in line with other terminals.

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/dfly.c: Simplify dprintfs for easier gettext
	analysis.

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/arm/linux.c: Change printf to dprintf.

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (check_feature): Cleanup and remove
	inappropriate printf.

2013-07-25  Andrey Borzenkov <arvidjaar@gmail.com>

	* .bzrignore: Remove grub-core/lib/dtc-grub,
	grub-core/Makefile.libfdt.def
	* conf/Makefile.extra-dist: Remove grub-core/Makefile.libfdt.def.

2013-07-25  Vladimir Serbinenko  <phcoder@gmail.com>
